--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,18 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="router"></div>
+    <script>
+      const router = document.getElementById('router');
+      window.addEventListener('hashchange', () => {
+        const hash = location.hash;
+        console.log(hash)
+        if(hash === '#/a') {
+          router.innerHTML='a'
+        } else {
+          router.innerHTML='b';
+        }
+      })
+    </script>
   </body>
 </html>
